[gd_scene load_steps=38 format=3 uid="uid://btdemgg0e0b4o"]

[ext_resource type="Script" uid="uid://cxtavdwherl7j" path="res://scripts/player_ui.gd" id="1_fatww"]
[ext_resource type="Texture2D" uid="uid://clx8vvaklih15" path="res://scenes/player/player_assets/crosshair046.png" id="2_by614"]
[ext_resource type="Material" uid="uid://34b3q43337o3" path="res://scripts/shaders/snow_ui_shader_material.tres" id="3_by614"]
[ext_resource type="Material" uid="uid://dku1yvibriqm2" path="res://scripts/shaders/color_palette_shader/color_limit_mat_1.tres" id="3_g18nd"]
[ext_resource type="Shader" uid="uid://brkgkmjgi5u64" path="res://scripts/shaders/vignette.gdshader" id="4_g18nd"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://assets/themes/MinimalUI4/MinimalUI.tres" id="4_nlx67"]
[ext_resource type="AudioStream" uid="uid://c3o2in8ur76wn" path="res://assets/sound/hitmarker.mp3" id="5_by614"]
[ext_resource type="StyleBox" uid="uid://hwskn1lu87b" path="res://scenes/player/settings_menu/temperature_style_box.tres" id="5_d61dg"]
[ext_resource type="PackedScene" uid="uid://s5lur3jc6w4b" path="res://scenes/player/settings_menu/settings_menu.tscn" id="6_en3kk"]
[ext_resource type="Texture2D" uid="uid://be25ar7jv3ol8" path="res://assets/BloodOverlay.png" id="6_u2sjp"]
[ext_resource type="AudioStream" uid="uid://dg8grqw6ww0m3" path="res://assets/sound/soft-wind-outside-sound-ambient-141989.mp3" id="8_5ypad"]
[ext_resource type="AudioStream" uid="uid://cgdh3ouygw0n5" path="res://assets/sound/fist-punch-or-kick.mp3" id="8_fvhh2"]
[ext_resource type="AudioStream" uid="uid://b6e8xn30garj8" path="res://assets/sound/sniper_shot_and_reload.mp3" id="10_4qoov"]
[ext_resource type="AudioStream" uid="uid://bduucs8w8a61i" path="res://assets/sound/dance_kick_shot_short.mp3" id="11_tpfsx"]
[ext_resource type="AudioStream" uid="uid://bv62q0plyyt2" path="res://assets/sound/reload.mp3" id="12_at7sd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyawr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="ImageTexture" id="ImageTexture_by614"]

[sub_resource type="ImageTexture" id="ImageTexture_en3kk"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_d61dg"]
color = Color(0, 0, 0, 0)
grow_begin = 6.0
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_g18nd"]
color = Color(1, 1, 1, 1)
thickness = 10

[sub_resource type="Shader" id="Shader_0ddcg"]
code = "shader_type canvas_item;

// Snow appearance parameters
uniform float spread : hint_range(0.0, 1.5) = 0.5;        // Snowflake spread
uniform float size : hint_range(0.01, 5.0) = 0.5;        // Snowflake size
uniform vec4 snow_color : source_color = vec4(1.0);      // Snow color
uniform float snow_transparency: hint_range(-0.5, 1.0) = 0.2;   // Intensity of the snow transparency

// Snow movement parameters
uniform float speed : hint_range(0.0, 10.0) = 0.5;       // Fall speed
uniform float wind : hint_range(-2.0, 2.0) = 0.0;        // Wind direction and strength
uniform int num_of_layers = 40;                          // Depth layers

// Constants for noise generation
const mat3 NOISE_MATRIX = mat3(
    vec3(13.323122, 23.5112, 21.71123),
    vec3(21.1212, 28.7312, 11.9312),
    vec3(21.8112, 14.7212, 61.3934)
);

// Helper function to generate snowflake pattern
vec3 generate_snowflake(vec2 coord, float layer_index, float time, float wind_strength) {
    // Scale coordinates based on layer depth
    float layer_scale = 1.0 + layer_index * 0.5 / (max(size, 0.01) * 2.0);
    vec2 scaled_coord = coord * layer_scale;

    // Apply movement (falling + wind)
    vec2 movement = vec2(
        scaled_coord.y * (spread * mod(layer_index * 7.238917, 1.0) - spread * 0.5) +
        (-wind_strength) * speed * time * 0.5,  // Reverse the wind direction by negating wind_strength
        -speed * time / (1.0 + layer_index * 0.5 * 0.03)
    );
    vec2 final_coord = scaled_coord + movement;

    // Generate noise pattern
    vec3 noise_input = vec3(floor(final_coord), 31.189 + layer_index);
    vec3 noise_val = floor(noise_input) * 0.00001 + fract(noise_input);
    vec3 random = fract((31415.9 + noise_val) / fract(NOISE_MATRIX * noise_val));

    // Calculate snowflake shape
    vec2 shape = abs(mod(final_coord, 1.0) - 0.5 + 0.9 * random.xy - 0.45);
    shape += 0.01 * abs(2.0 * fract(10.0 * final_coord.yx) - 1.0);

    // Calculate edge softness
    float depth_offset = 5.0 * sin(time * 0.1);
    float edge_softness = 0.005 + 0.05 * min(0.5 * abs(layer_index - 5.0 - depth_offset), 1.0);

    // Calculate final shape
    float shape_value = 0.6 * max(shape.x - shape.y, shape.x + shape.y) + max(shape.x, shape.y) - 0.01;

    return vec3(smoothstep(edge_softness, -edge_softness, shape_value) *
                (random.x / (1.0 + 0.02 * layer_index * 0.5)));
}

void fragment() {
    vec3 snow_accumulation = vec3(0.0);

    // Generate snow for each layer
    for (int i = 0; i < num_of_layers; i++) {
        snow_accumulation += generate_snowflake(UV, float(i), TIME, wind);
    }

    // Calculate final color
    float snow_intensity = clamp(length(snow_accumulation), 0.0, 1.0);
	vec4 base_color = vec4(0.0);

    // Apply transparency effect to the snow color
    vec4 transparency_color = vec4(snow_color.rgb * (1.0 + snow_transparency), snow_intensity);

    COLOR = mix(base_color, transparency_color, snow_intensity);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_en3kk"]
shader = SubResource("Shader_0ddcg")
shader_parameter/spread = 0.8
shader_parameter/size = 0.8
shader_parameter/snow_color = Color(1, 1, 1, 1)
shader_parameter/snow_transparency = 0.4
shader_parameter/speed = 2.0
shader_parameter/wind = 0.4
shader_parameter/num_of_layers = 30

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tpfsx"]
shader = ExtResource("4_g18nd")
shader_parameter/inner_radius = 0.1
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 0.5
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = Color(0.321569, 0.584314, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tpfsx"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvhh2"]
bg_color = Color(0.122631, 0.122631, 0.122631, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ypad"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.196078, 0.282353, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.392975, 0.527855, 0.527692, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2sjp"]
bg_color = Color(0.122631, 0.122631, 0.122631, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55cys"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 2.0
bg_color = Color(0.447059, 0.282353, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.69774, 0.483876, 0.482368, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qoov"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_detail = 5

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_d61dg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlx67"]
bg_color = Color(0.04, 0.0028, 0.01644, 0.278431)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.194746, 0.194746, 0.194746, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_by614"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 2.0
bg_color = Color(0.949949, 0.883835, 0.931763, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.682968, 0.682969, 0.682968, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g18nd"]
bg_color = Color(1, 0.552941, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.872349, 0.308474, 5.77569e-07, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at7sd"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_detail = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mo8vb"]
color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d61dg"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1guf"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.101961, 0.101961, 0.101961, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="PlayerUi" type="CanvasLayer" node_paths=PackedStringArray("health_bar", "health_label", "temp_bar", "temp_label")]
script = ExtResource("1_fatww")
health_bar = NodePath("BottomLeft/MarginContainer/VBoxContainer/HealthBar")
health_label = NodePath("BottomLeft/MarginContainer/VBoxContainer/HBoxContainer/HealthLabel")
temp_bar = NodePath("BottomLeft/MarginContainer/VBoxContainer/TempBar")
temp_label = NodePath("BottomLeft/MarginContainer/VBoxContainer/TempLabel")

[node name="CustomSight" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CustomSightPanel" type="Panel" parent="CustomSight"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tyawr")

[node name="HitSight" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_by614")
stretch_mode = 3

[node name="SprintBar" type="HSlider" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_icons/grabber = SubResource("ImageTexture_by614")
theme_override_icons/grabber_disabled = SubResource("ImageTexture_en3kk")
theme_override_styles/slider = SubResource("StyleBoxLine_d61dg")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_g18nd")
value = 100.0
editable = false
scrollable = false

[node name="Shaders" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Blood" type="TextureRect" parent="Shaders"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_u2sjp")

[node name="SnowShaderLight" type="ColorRect" parent="Shaders"]
material = SubResource("ShaderMaterial_en3kk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_right = 9.0
grow_horizontal = 2
grow_vertical = 2

[node name="SnowShaderHeavy" type="ColorRect" parent="Shaders"]
visible = false
material = ExtResource("3_by614")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VignetteShader" type="ColorRect" parent="Shaders"]
visible = false
material = SubResource("ShaderMaterial_tpfsx")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Limiter" type="ColorRect" parent="Shaders"]
visible = false
material = ExtResource("3_g18nd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Topleft" type="PanelContainer" parent="."]
offset_right = 225.0
offset_bottom = 200.0
theme = ExtResource("4_nlx67")
theme_override_styles/panel = SubResource("StyleBoxFlat_tpfsx")

[node name="MarginContainer" type="MarginContainer" parent="Topleft"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Topleft/MarginContainer"]
layout_mode = 2

[node name="VerticalMeters" type="VBoxContainer" parent="Topleft/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="CastleStatus" type="HBoxContainer" parent="Topleft/MarginContainer/HBoxContainer/VerticalMeters"]
layout_mode = 2
size_flags_vertical = 3

[node name="CastleHealthBar" type="ProgressBar" parent="Topleft/MarginContainer/HBoxContainer/VerticalMeters/CastleStatus"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_fvhh2")
theme_override_styles/fill = SubResource("StyleBoxFlat_5ypad")
max_value = 2000.0
value = 2000.0
fill_mode = 3
show_percentage = false

[node name="CastleFuelBar" type="ProgressBar" parent="Topleft/MarginContainer/HBoxContainer/VerticalMeters/CastleStatus"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/background = SubResource("StyleBoxFlat_u2sjp")
theme_override_styles/fill = SubResource("StyleBoxFlat_55cys")
max_value = 1000.0
value = 700.0
fill_mode = 3
show_percentage = false

[node name="HBoxContainer3" type="HBoxContainer" parent="Topleft/MarginContainer/HBoxContainer/VerticalMeters"]
layout_mode = 2

[node name="H" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VerticalMeters/HBoxContainer3"]
layout_mode = 2
text = "H"

[node name="F" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VerticalMeters/HBoxContainer3"]
layout_mode = 2
text = "F"

[node name="VBoxContainer" type="VBoxContainer" parent="Topleft/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="PlayerCountLabels" type="HBoxContainer" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/PlayerCountLabels"]
layout_mode = 2
size_flags_vertical = 0
text = "Reserves:   "

[node name="PlayerCount" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/PlayerCountLabels"]
layout_mode = 2
size_flags_vertical = 0
text = "0"

[node name="PlayerCount2" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/PlayerCountLabels"]
layout_mode = 2
size_flags_vertical = 0
text = "/"

[node name="PlayerCountTotal" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/PlayerCountLabels"]
layout_mode = 2
size_flags_vertical = 0
text = "10"

[node name="Dist" type="HBoxContainer" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/Dist"]
layout_mode = 2
text = "Distance: "

[node name="DistanceLabel" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/Dist"]
unique_name_in_owner = true
layout_mode = 2

[node name="StatusLabels" type="HBoxContainer" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/StatusLabels"]
layout_mode = 2
size_flags_vertical = 0
text = "Data Frames:  "

[node name="DataFrameCount" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/StatusLabels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "0"

[node name="DataFrameTotal" type="Label" parent="Topleft/MarginContainer/HBoxContainer/VBoxContainer/StatusLabels"]
layout_mode = 2
size_flags_vertical = 0
text = "/ 5"

[node name="BottomLeft" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(280, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_right = 280.0
grow_vertical = 0
theme = ExtResource("4_nlx67")
theme_override_styles/panel = SubResource("StyleBoxFlat_4qoov")

[node name="MarginContainer" type="MarginContainer" parent="BottomLeft"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BottomLeft/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BottomLeft/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="BottomLeft/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 23
text = "100 / 100"

[node name="HealthBar" type="ProgressBar" parent="BottomLeft/MarginContainer/VBoxContainer"]
material = SubResource("CanvasItemMaterial_d61dg")
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_nlx67")
theme_override_styles/fill = SubResource("StyleBoxFlat_by614")
step = 1.0
value = 50.0
show_percentage = false

[node name="TempBar" type="ProgressBar" parent="BottomLeft/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = ExtResource("5_d61dg")
theme_override_styles/fill = SubResource("StyleBoxFlat_g18nd")
value = 70.0
show_percentage = false

[node name="TempLabel" type="Label" parent="BottomLeft/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "30"

[node name="BottomRight" type="PanelContainer" parent="."]
clip_contents = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -180.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_nlx67")
theme_override_styles/panel = SubResource("StyleBoxFlat_at7sd")

[node name="MarginContainer" type="MarginContainer" parent="BottomRight"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRight/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BottomRight/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrentWeaponLabel" type="Label" parent="BottomRight/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "AR1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CurrentAmmo" type="Label" parent="BottomRight/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "30 / 300"
horizontal_alignment = 2
vertical_alignment = 2

[node name="HSeparator" type="HSeparator" parent="BottomRight/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_mo8vb")

[node name="HBoxContainer2" type="HBoxContainer" parent="BottomRight/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackupWeaponLabel" type="Label" parent="BottomRight/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 13
text = "Sniper"
vertical_alignment = 2

[node name="BackupAmmo" type="Label" parent="BottomRight/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 13
text = "4 / 20"
horizontal_alignment = 2

[node name="Center" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -101.0
offset_right = 20.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_nlx67")
theme_override_styles/panel = SubResource("StyleBoxFlat_d61dg")

[node name="MarginContainer" type="MarginContainer" parent="Center"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Center/MarginContainer"]
layout_mode = 2

[node name="InteractLabel" type="Label" parent="Center/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.505882)
theme_override_constants/outline_size = 10
horizontal_alignment = 1

[node name="CenterWide" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l1guf")

[node name="MarginContainer" type="MarginContainer" parent="CenterWide"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="AnnounceLabel" type="Label" parent="CenterWide/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("4_nlx67")
theme_override_font_sizes/font_size = 48
text = "CASTLE REPLENISHED"
horizontal_alignment = 1

[node name="WindSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5ypad")
volume_db = -5.0
autoplay = true

[node name="MeleeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fvhh2")
pitch_scale = 0.8

[node name="HitSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_by614")
volume_db = -10.0
pitch_scale = 1.2
max_polyphony = 5

[node name="SettingsMenu" parent="." instance=ExtResource("6_en3kk")]
visible = false

[node name="FireSniper" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4qoov")
volume_db = -1.0
max_polyphony = 5

[node name="FireRifle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_tpfsx")
volume_db = -2.0
pitch_scale = 1.3
max_polyphony = 5

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_at7sd")
